Added elementary functionalities and Service file

--- a/SDALab4/SDALab4.vcxproj
+++ b/SDALab4/SDALab4.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="app.cpp" />
     <ClCompile Include="TernaryHeap.cpp" />
     <ClCompile Include="TestP12.cpp" />
   </ItemGroup>
