--- a/SDALab4/SDALab4.vcxproj.filters
+++ b/SDALab4/SDALab4.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="TernaryHeap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="app.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="P12.h">
