--- a/SDALab4/SDALab4.vcxproj.filters
+++ b/SDALab4/SDALab4.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="app.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="P12.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="P12.h">
