Added iterator and completed all functionalities

--- a/SDALab4/SDALab4.vcxproj
+++ b/SDALab4/SDALab4.vcxproj
@@ -139,11 +139,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
+    <ClCompile Include="HeapIterator.cpp" />
     <ClCompile Include="P12.cpp" />
     <ClCompile Include="TernaryHeap.cpp" />
     <ClCompile Include="TestP12.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HeapIterator.h" />
     <ClInclude Include="P12.h" />
     <ClInclude Include="TernaryHeap.h" />
     <ClInclude Include="TestP12.h" />
