--- a/SDALab4/SDALab4.vcxproj.filters
+++ b/SDALab4/SDALab4.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="P12.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HeapIterator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="P12.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TernaryHeap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HeapIterator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
